# evdad

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: run_unit_tests.yaml
docs/: README.md
docs/datasets/: README.md
docs/models/: README.md
docs/tutorials/: README.md
docs/tutorials/inference/: README.md
docs/tutorials/training/: README.md
src/conf/: experiment.yaml  experiment_HTVD_cuba_cnn_autoencoder.yaml  experiment_HTVD_cuba_linear_autoencoder.yaml  experiment_NMNIST_cuba_cnn_autoencoder.yaml  experiment_NMNIST_cuba_linear_autoencoder.yaml  experiment_UCSD_cuba_cnn_autoencoder.yaml  experiment_UCSD_cuba_linear_autoencoder.yaml  experiment_UCSD_cuba_simple_conv.yaml  experiment_UCSD_cuba_simple_dense.yaml  experiment_bootsrap_MNIST.yaml  experiment_bootstrap_HTVD_simple_conv.yaml  experiment_bootstrap_HTVD_simple_dense.yaml  experiment_bootstrap_UCSD_simple_dense.yaml  experiment_cuba_simple_conv.yaml  experiment_cuba_simple_dense.yaml  infer_HTVD.yaml  infer_NMNIST.yaml  infer_UCSD.yaml
src/conf/defaults/: config.yaml  experiment_cuba_simple_conv.yaml  experiment_cuba_simple_dense.yaml  infer.yaml  train.yaml
src/conf/experiments/: bootstrap_train_NMNIST_classifier_CUBA_simple_conv.yaml  bootstrap_train_NMNIST_classifier_CUBA_simple_dense.yaml  bootstrap_train_classifier_CUBA_simple_conv.yaml  bootstrap_train_classifier_CUBA_simple_dense.yaml  slayer_train_NMNIST_autoencoder_CUBA_cnn.yaml  slayer_train_NMNIST_autoencoder_CUBA_dense.yaml  slayer_train_NMNIST_classifier_CUBA_simple_conv.yaml  slayer_train_NMNIST_classifier_CUBA_simple_dense.yaml  slayer_train_autoencoder_CUBA_cnn.yaml  (+4 more)
src/evdad/: types.py  utils.py
tests/test_data/: train.csv  train_labels.csv
tests/unit/: test_data_event_dataset.py  test_data_generic_event_dataset.py  test_models_lava_slayer_cuba.py  test_models_lava_slayer_interface.py  test_trainer_classifier.py  test_trainer_loss.py  test_trainer_optimizer.py  utils.py
(+40 files in other folders)
