[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "evdad"
version = "0.2.0"
authors = [
    {name = "Piotr Baryczkowski", email = "piotr.baryczkowski@put.poznan.pl"},
]
description = "My Masters thesis project - Framework for training spiking neural networks based on event driven data."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["snn", "spiking-neural-networks", "event-cameras", "lava", "event-driven"]
license = {text = "MIT-license"}
classifiers = [
    "Framework :: LAVA",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "black==24.3.0",
    "hydra-core==1.3.2",
    "isort==5.13.2",
    "lava-dl @ https://github.com/lava-nc/lava-dl/releases/download/v0.6.0/lava_dl-0.6.0-py3-none-any.whl",
    "lava-nc==0.10.0",
    "matplotlib==3.8.2",
    "mlflow==2.16.0",
    "nvidia-cublas-cu12==12.1.3.1",
    "nvidia-cuda-cupti-cu12==12.1.105",
    "nvidia-cuda-nvrtc-cu12==12.1.105",
    "nvidia-cuda-runtime-cu12==12.1.105",
    "nvidia-cudnn-cu12==8.9.2.26",
    "nvidia-cufft-cu12==11.0.2.54",
    "nvidia-curand-cu12==10.3.2.106",
    "nvidia-cusolver-cu12==11.4.5.107",
    "nvidia-cusparse-cu12==12.1.0.106",
    "nvidia-nccl-cu12==2.20.5",
    "nvidia-nvjitlink-cu12==12.6.68",
    "nvidia-nvtx-cu12==12.1.105",
    "omegaconf==2.3.0",
    "pip==24.3.1",
    "pytest==7.4.4",
    "pytest-cov==6.0.0",
    "setproctitle==1.3.3",
    "torch==2.3.1",
    "torchvision==0.18.1",
    "tox==4.18.1",
    "tqdm==4.66.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
evdad = ["*.yaml", "**/*.yaml", "conf"]

[project.scripts]
evdad-slayer-train = "evdad.scripts.slayer_train:main"
evdad-bootstrap-train = "evdad.scripts.bootstrap_train:main"
evdad-infer = "evdad.scripts.infer:main"
